CloudAlpacas/salesforce/main/default/objects/SDO_AgentWork__c/SDO_AgentWork__c.object-meta.xml
<CustomObject>
    <description>Shadow object for AgentWork. Stores demo handle time and status data for Service Assistant Analytics. Feeds the AgentWork DMO via a SalesforceDotCom data stream in Data Cloud.</description>
    <label>SDO AgentWork</label>
    <nameField>
        <displayFormat>AW-{00000}</displayFormat>
        <label>SDO AgentWork Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO AgentWork</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>