CloudAlpacas/salesforce/main/default/objects/SDO_AgentWork__c/fields/AcceptDateTime__c.field-meta.xml
<CustomField>
    <fullName>AcceptDateTime__c</fullName>
    <description>Date/time the agent accepted the work item. Maps to AgentWork DMO AcceptDateTime field.</description>
    <label>Accept Date Time</label>
    <type>DateTime</type>
</CustomField>