CloudAlpacas/salesforce/main/default/objects/SDO_AgentWork__c/fields/ActiveTime__c.field-meta.xml
<CustomField>
    <fullName>ActiveTime__c</fullName>
    <label>Active Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>