CloudAlpacas/salesforce/main/default/objects/SDO_AgentWork__c/fields/RelatedToObject__c.field-meta.xml
<CustomField>
    <fullName>RelatedToObject__c</fullName>
    <label>Related To Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>