CloudAlpacas/salesforce/main/default/objects/SDO_AgentWork__c/fields/RoutingType__c.field-meta.xml
<CustomField>
    <fullName>RoutingType__c</fullName>
    <label>Routing Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>