CloudAlpacas/salesforce/main/default/objects/SDO_AgentWork__c/fields/SpeedToAnswer__c.field-meta.xml
<CustomField>
    <fullName>SpeedToAnswer__c</fullName>
    <label>Speed To Answer (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>