CloudAlpacas/salesforce/main/default/objects/SDO_AgentWork__c/fields/User_Group_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Group_Developer_Name__c</fullName>
    <label>User Group Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>