CloudAlpacas/salesforce/main/default/objects/SDO_AgentWork__c/fields/UserGroupId__c.field-meta.xml
<CustomField>
    <fullName>UserGroupId__c</fullName>
    <label>User Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>