CloudAlpacas/salesforce/main/default/objects/SDO_AgentWork__c/fields/WorkItemId__c.field-meta.xml
<CustomField>
    <fullName>WorkItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce ID of the related Case. Populated by resolve_lookups.py at load time using Case External_ID__c. Maps to AgentWork DMO WorkItemId field.</description>
    <label>Work Item ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>WorkItemId</relationshipName>
    <type>Lookup</type>
</CustomField>